fix address overflow

--- a/html/styles/address.less
+++ b/html/styles/address.less
@@ -180,17 +180,17 @@
                             display: inline-block;
                             padding-left: 20px;
                             color:rgba(113,124,136,1);
-                            width: 60%;
+                            // width: 60%;
                             line-height:24px;
                             word-wrap: break-word;
                             position: absolute;
-                            width: 246px ;
+                            // width: 246px ;
                             b {
                                 font-family:MoskMedium500;
                                 font-size:15px;
                                 color:rgba(20,42,63,1);
                                 line-height:22px;
-                                max-width: 270px;
+                                // max-width: 270px;
                                 word-break:break-all; 
                                 word-wrap:break-word;
                             }
